--- a/public/login.html
+++ b/public/login.html
@@ -11,10 +11,9 @@
 </head>
 
 <body>
-<p id="demo">123</p>
 <div class="table1">
 </div>
-<form id="table11" action="/login" method="post" >
+<!form id="table11" action="/login" method="post" -->
     <input type="text" placeholder="Enter Username" name="Lid" id="Lid"/>
     <br/>
     <input type="password" placeholder="Enter Password" name="Lpassword" id="Lpassword"/>
@@ -23,7 +22,7 @@
     <a href="https://stark-spire-21434.herokuapp.com/signup.html">
     <input type="button" value="SignUp" id="Lsignup">
     </a>
-</form>
+<!/form>
 <input type="button" onClick="msgbox(1)" value="rule" id="Lrule">
 <div id='inputbox' class="box">
     <a class='x' href=''; onclick="msgbox(0); return false;">close</a>
@@ -39,14 +38,24 @@
     function msgbox(n){
         document.getElementById('inputbox').style.display=n?'block':'none';     /* 点击按钮打开/关闭 对话框 */
     }
-    $.ajax({
-        type;"get",
-        url:"/login",
-        success:function(data){
-            var user=data.msg;
-            document.getElementById("demo").innerHTML=user;
-        }
-    })
+    $("#Llogin").click(function(){
+        $.ajax({
+            type;"post",
+            url:"/login",
+            data:{Lid:Lid, Lpassword:Lpassword},
+            success:function(data){
+                if(data.code>0){
+                    location.href="https://stark-spire-21434.herokuapp.com/homepage.html";
+                }else{
+                    alert(data.msg);
+                }
+            },
+            error:function(){
+                alert("Internet error!");
+            }
+        })
+
+    });
 </script>
 </body>
 </html>
