--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
 <body>
 <div class="table1">
 </div>
-<!form id="table11" action="/login" method="post" -->
+<form id="table11" action="/login" method="post">
     <input type="text" placeholder="Enter Username" name="Lid" id="Lid"/>
     <br/>
     <input type="password" placeholder="Enter Password" name="Lpassword" id="Lpassword"/>
@@ -22,7 +22,7 @@
     <a href="https://stark-spire-21434.herokuapp.com/signup.html">
     <input type="button" value="SignUp" id="Lsignup">
     </a>
-<!/form>
+</form>
 <input type="button" onClick="msgbox(1)" value="rule" id="Lrule">
 <div id='inputbox' class="box">
     <a class='x' href=''; onclick="msgbox(0); return false;">close</a>
