--- a/public/login.html
+++ b/public/login.html
@@ -7,7 +7,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Login</title>
     <link rel="stylesheet" type="text/css" href="login.css">
-    <script type="text/javascript" src="/jquery-3.1.0.in.js"></script>
 </head>
 
 <body>
@@ -22,23 +21,9 @@
     <a href="https://stark-spire-21434.herokuapp.com/signup.html">
     <input type="button" value="SignUp" id="Lsignup">
     </a>
-</form>
-<input type="button" onClick="msgbox(1)" value="rule" id="Lrule">
-<div id='inputbox' class="box">
-    <a class='x' href=''; onclick="msgbox(0); return false;">close</a>
-    Players choose a pattern for the cards. Cards are all initialized face-down.
-    <br/>
-    Each player takes turns flipping two cards face-up — if they are of the same , then that player wins the pair(the pair stays face-up) and gets another turn.
-    <br/>
-    If the cards are not identical, they are turned back facedown and it becomes the next player’s turn to pick two cards.
-    <br/>
-    The game continues until players have picked up all the pairs; the winner is the player with the most pairs.
-</div>
-<script>  
-    function msgbox(n){
-        document.getElementById('inputbox').style.display=n?'block':'none';     /* 点击按钮打开/关闭 对话框 */
-    }
-    $("#Llogin").click(function(){
+    <script src="js/jquery.min.js"></script>
+    <script>
+        $("#Llogin").click(function(){
         $.ajax({
             type;"post",
             url:"/login",
@@ -56,6 +41,23 @@
         })
 
     });
+    </script>
+</form>
+<input type="button" onClick="msgbox(1)" value="rule" id="Lrule">
+<div id='inputbox' class="box">
+    <a class='x' href=''; onclick="msgbox(0); return false;">close</a>
+    Players choose a pattern for the cards. Cards are all initialized face-down.
+    <br/>
+    Each player takes turns flipping two cards face-up — if they are of the same , then that player wins the pair(the pair stays face-up) and gets another turn.
+    <br/>
+    If the cards are not identical, they are turned back facedown and it becomes the next player’s turn to pick two cards.
+    <br/>
+    The game continues until players have picked up all the pairs; the winner is the player with the most pairs.
+</div>
+<script>  
+    function msgbox(n){
+        document.getElementById('inputbox').style.display=n?'block':'none';     /* 点击按钮打开/关闭 对话框 */
+    }
 </script>
 </body>
 </html>
