--- a/public/login.html
+++ b/public/login.html
@@ -8,11 +8,11 @@
     <title>Login</title>
     <link rel="stylesheet" type="text/css" href="login.css">
 </head>
-
+<p id=demo></p>
 <body>
 <div class="table1">
 </div>
-<form id="table11" action="/login" method="post">
+<div id="table11" action="/login" method="post">
     <input type="text" placeholder="Enter Username" name="Lid" id="Lid"/>
     <br/>
     <input type="password" placeholder="Enter Password" name="Lpassword" id="Lpassword"/>
@@ -24,25 +24,25 @@
     <script src="js/jquery.min.js"></script>
     <script>
         $("#Llogin").click(function(){
-        $.ajax({
-            type;"post",
-            url:"/login",
-            data:{Lid:Lid, Lpassword:Lpassword},
-            success:function(data){
-                if(data.code>0){
-                    location.href="https://stark-spire-21434.herokuapp.com/homepage.html";
-                }else{
-                    alert(data.msg);
+            $.ajax({
+                type;"post",
+                url:"/login",
+                data:{Lid:Lid, Lpassword:Lpassword},
+                success:function(data){
+                    if(data.code>0){
+                        location.href="https://stark-spire-21434.herokuapp.com/homepage.html";
+                    }else{
+                        alert(data.msg);
+                    }
+                },
+                error:function(){
+                    alert("Internet error!");
                 }
-            },
-            error:function(){
-                alert("Internet error!");
-            }
-        })
+            })
 
-    });
+        });
     </script>
-</form>
+</div>
 <input type="button" onClick="msgbox(1)" value="rule" id="Lrule">
 <div id='inputbox' class="box">
     <a class='x' href=''; onclick="msgbox(0); return false;">close</a>
