--- a/public/login.html
+++ b/public/login.html
@@ -26,6 +26,7 @@
         $("#Llogin").click(function(){
             var Lid=$("#Lid").val();
             var Lpassword=$("#Lpassword").val();
+            document.getElementById.innerHTML=123
             $.ajax({
                 type;"post",
                 url:"/login",
