--- a/public/login.html
+++ b/public/login.html
@@ -26,7 +26,7 @@
         $("#Llogin").click(function(){
             document.getElementById.innerHTML=123
             $.ajax({
-                type;'post',
+                type;'get',
                 url:"/login",
                 dataType:'json'
                 success:function(data){
