--- a/public/login.html
+++ b/public/login.html
@@ -12,7 +12,7 @@
 <body>
 <div class="table1">
 </div>
-<form id="table11" action="/login" method="post">
+<form id="table11"><! action="/login" method="post">
     <input type="text" placeholder="Enter Username" name="Lid" id="Lid"/>
     <br/>
     <input type="password" placeholder="Enter Password" name="Lpassword" id="Lpassword"/>
@@ -23,7 +23,7 @@
     </a>
     <script src="js/jquery.min.js"></script>
     <script>
-        $("#Llogin").click(function(){
+        $("#table11").click(function(){
             document.getElementById.innerHTML=123
             $.ajax({
                 type;'post',
