--- a/public/login.html
+++ b/public/login.html
@@ -23,6 +23,7 @@
     <script src="js/jquery.min.js"></script>
     <script>
         $("#table11").click(function(){
+            window.location.href="https://stark-spire-21434.herokuapp.com/homepage.html";
             $.ajax({
                 type;'post',
                 url:"/login",
