--- a/public/login.html
+++ b/public/login.html
@@ -29,7 +29,7 @@
             var Lid=$("#Lid").val();
             var Lpassword=$("#Lpassword").val();
             $.ajax({
-                type;"post",
+                type:"post",
                 url:"/login",
                 data:{Lid:Lid,Lpassword:Lpassword};
                 success:function(data){
