--- a/public/login.html
+++ b/public/login.html
@@ -13,16 +13,16 @@
 <body>
 <div class="table1">
 </div>
-<div id="table11"><! action="/login" method="post">
+<form id="table11"><! action="/login" method="post">
     <input type="text" placeholder="Enter Username" name="Lid" id="Lid"/>
     <br/>
     <input type="password" placeholder="Enter Password" name="Lpassword" id="Lpassword"/>
     <br/>
-    <input type="button" value="Login" name="Llogin" id="Llogin" >
+    <input type="submit" value="Login" name="Llogin" id="Llogin" >
     <a href="https://stark-spire-21434.herokuapp.com/signup.html">
     <input type="button" value="SignUp" id="Lsignup">
     </a>
-</div>
+</form>
 
     <script>
         $("#Llogin").click(function(){
