--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
 <body>
 <div class="table1">
 </div>
-<form id="table11"><! action="/login" method="post">
+<div id="table11"><! action="/login" method="post">
     <input type="text" placeholder="Enter Username" name="Lid" id="Lid"/>
     <br/>
     <input type="password" placeholder="Enter Password" name="Lpassword" id="Lpassword"/>
@@ -22,7 +22,7 @@
     <a href="https://stark-spire-21434.herokuapp.com/signup.html">
     <input type="button" value="SignUp" id="Lsignup">
     </a>
-</form>
+</div>
 
     <script>
         $("#Llogin").click(function(){
