--- a/public/homepage.html
+++ b/public/homepage.html
@@ -21,7 +21,7 @@
                 location.href="https://stark-spire-21434.herokuapp.com/login.html"
             }
             var html="";
-            html+=data.Lid
+            html+=47456464
             $("tbody").html(html);
         },
         error:function(){
