--- a/public/homepage.html
+++ b/public/homepage.html
@@ -20,10 +20,10 @@
             if(data.status==-1){
                 location.href="https://stark-spire-21434.herokuapp.com/login.html"
             }
-            var html="";
-            html+=data.status;
-            $("tbody").html(html);
-        },
+           // var html="";
+           // html+=data.status;
+            //$("tbody").html(html);
+        //},
         error:function(){
             alert("Internet Error");
         }
