--- a/public/homepage.html
+++ b/public/homepage.html
@@ -20,7 +20,7 @@
             if(data.status==-1){
                 //location.href="https://stark-spire-21434.herokuapp.com/login.html"
                 var html="";
-                hrml+=data.status;
+                html+=data.status;
                 $("tbody").html(html)
 
             }
