--- a/public/homepage.html
+++ b/public/homepage.html
@@ -19,9 +19,13 @@
         success:function(data){
             if(data.status==-1){
                 //location.href="https://stark-spire-21434.herokuapp.com/login.html"
-                var html="";
-                html+=data.msg;
-                $("h1").html(html)
+                var user="";
+                user+=data.user;
+                $("h1").html(user);
+                var msg="";
+                msg+=data.msg;
+                $("p1").html(msg);
+
 
             }
            // var html="";
@@ -90,7 +94,7 @@
 
 <p id="boardtitle">Public Announcements</p>
 <div id="public_board">
-    <p id = "gm_msg">Message</p>
+    <p1 id = "gm_msg">Message</p1>
 </div>
 
 <table id="myownbackground">    
