--- a/public/signup.html
+++ b/public/signup.html
@@ -51,25 +51,25 @@
 
 </div>
 <script>  
-   function test(){
-        var ID,pwd,name,age, sq,sa;
-        ID = document.getElementById('sid').value;
-        pwd= document.getElementById('spassword').value;
-        name= document.getElementById('sname').value;
-        age= document.getElementById('sage').value;
-        sq= document.getElementById('squestion').value;
-        sa= document.getElementById('sanswer').value;
+   //function test(){
+   //     var ID,pwd,name,age, sq,sa;
+     //   ID = document.getElementById('sid').value;
+       // pwd= document.getElementById('spassword').value;
+        //name= document.getElementById('sname').value;
+        //age= document.getElementById('sage').value;
+        //sq= document.getElementById('squestion').value;
+        //sa= document.getElementById('sanswer').value;
    
-        if(ID=="" || pwd=="" || name=="" || age=="" || sq=="" || sa==""){
-          alert("Please enter all information!");
-        }
+        //if(ID=="" || pwd=="" || name=="" || age=="" || sq=="" || sa==""){
+          //alert("Please enter all information!");
+        //}
       //   else if(ID=="GM1"|| ID=="GM2" || ID=="GM3"){
       //     alert("Sorry!You can not sign up as GM!")
       //   }
-        else{
-         window.location.href="https://stark-spire-21434.herokuapp.com/login.html";
-        }
-    }
+        //else{
+         //window.location.href="https://stark-spire-21434.herokuapp.com/login.html";
+        //}
+    //}
 </script>
 
 </body>
