--- a/public/login.html
+++ b/public/login.html
@@ -13,7 +13,7 @@
 <body>
 <div class="table1">
 </div>
-<div id="table11"><! action="/login" method="post">
+<div id="table11">
     <input type="text" placeholder="Enter Username" name="Lid" id="Lid"/>
     <br/>
     <input type="password" placeholder="Enter Password" name="Lpassword" id="Lpassword"/>
