--- a/public/homepage.html
+++ b/public/homepage.html
@@ -18,15 +18,12 @@
         url:"/userlist",
         success:function(data){
             if(data.status==-1){
-                //location.href="https://stark-spire-21434.herokuapp.com/login.html"
                 var user="";
                 user+=data.user;
                 $("h1").html(user);
                 var msg="";
                 msg+=data.msg;
                 $("p1").html(msg);
-
-
             }
            // var html="";
            // html+=data.status;
@@ -36,6 +33,22 @@
             alert("Internet Error");
         }
     });    
+
+
+    $.ajax({
+        type:"get",
+        url:"/logout",
+        success:function(data){
+            if(data.status==-1){
+                location.href="https://stark-spire-21434.herokuapp.com/login.html"
+            }
+        },
+        error:function(){
+            alert("logout failed");
+        }
+    }); 
+
+
 
 </script>
 
