--- a/public/homepage.html
+++ b/public/homepage.html
@@ -136,7 +136,7 @@
     };
 </script>
 
-<button id="logout" class="float-left submit-button" >Logout</button>
+<input type="submit" id="logout" class="float-left submit-button" value="logout"> 
 
 <input type="button" onClick="msgbox(1)" value="rule" id="Hrule">
 <div id='inputbox' class="box">
