--- a/public/homepage.html
+++ b/public/homepage.html
@@ -8,6 +8,8 @@
     <link rel = "shortcut icon" href="">
     <link rel="stylesheet" type="text/css" href="homepage.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <link rel = "icon" href="data:,">
+
 <!-- <script type="text/javascript" src="poker_home.js"></script> -->
 </head>
 
