--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
     <title>Login</title>
     <link rel="stylesheet" type="text/css" href="login.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <link rel = "shortcut icon" href="">
+    <link rel = "icon" href="data:,">
 
 </head>
 <body>
