--- a/public/GM.html
+++ b/public/GM.html
@@ -3,7 +3,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-   <link href="GM.css " rel="stylesheet" type="text/css" /> 
+    <link href="GM.css " rel="stylesheet" type="text/css" /> 
+    <link rel = "icon" href="data:,">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+
     <title>GM</title>
 </head>
 <body>
