--- a/public/GM.html
+++ b/public/GM.html
@@ -11,10 +11,36 @@
     <title>GM</title>
 </head>
 <body>
+<h1 id="name"></h1>
+
+<script>
+    //run right away
+    $.ajax({
+        type:"get",
+        url:"/userlist",
+        success:function(data){
+            if(data.status==-1){
+                var user="";
+                user+=data.user;
+                $("#name").html(user);
+            }
+        },
+        error:function(){
+            alert("Internet Error");
+        }
+    });    
+
+</script>>
+
+
+
+
+
+
 
   <h1>Game Manager</h1>
   <div id="GGM">
-    
+      <h1>Manage players</h1>
       <form action="/search" method="post" >
         <input type="text" id="gsearch" name="gsearch" placeholder="enter ID">
         <input type="submit" value="Search" id="search" name="search">
