--- a/public/modify.html
+++ b/public/modify.html
@@ -5,6 +5,8 @@
     <title>Modify</title>
     <meta charset="UTF-8">
     <link href="modify.css " rel="stylesheet" type="text/css" /> 
+    <link rel = "icon" href="data:,">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     
 </head>
 
