--- a/public/signup.html
+++ b/public/signup.html
@@ -4,6 +4,7 @@
 
 <link href="signup.css " rel="stylesheet" type="text/css" />  
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script> 
+<link rel = "icon" href="data:,">
 
 
 </head>
