--- a/public/modify.html
+++ b/public/modify.html
@@ -19,9 +19,7 @@
     <h2 >Personal Information</h2>
     <div >
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <label for="mid">ID:</label> <p id= mid></p> <br>
-
-
+        <label for="mid">ID:</label> <label id= mid></label> <br>
 
         <script>
             //run right away
