--- a/public/modify.html
+++ b/public/modify.html
@@ -19,7 +19,7 @@
     <h2 >Personal Information</h2>
     <div >
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <label for="mid">ID:</label> <label id= mid></label> <br>
+        <label for="mid"></label> <br>
 
         <script>
             //run right away
@@ -42,14 +42,12 @@
         </script>
 
 
-        &nbsp;
-        <label for="mpassword">Password:</label>
+=       <label for="mpassword">Password:</label>
         <input type="text" id="mpassword" placeholder="Enter New Password" name="mpassword" /><br>
 
-        &nbsp;
-        <label for="mname">Name:</label>
+=       <label for="mname">Name:</label>
         <input type="text" id="mname" placeholder="Enter Your Name" name="mname" /><br>
-        &nbsp;
+
         <label for="mage">Age:</label>
         <input type="number" id="mage" placeholder="Enter Your age" name="mage" /><br>
 
