--- a/public/modify.html
+++ b/public/modify.html
@@ -19,7 +19,7 @@
     <h2 >Personal Information</h2>
     <div >
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <label for="mid"></label> <br>
+        <label id="mid"></label> <br>
 
         <script>
             //run right away
