--- a/public/modify.html
+++ b/public/modify.html
@@ -18,9 +18,9 @@
     <h1>Modify</h1>
     <h2 >Personal Information</h2>
     <div >
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-        <label id="mid"></label> <br>
-
+        
+        <label>ID: <label id="mid"></label> </label><br>
+ 
         <script>
             //run right away
             $.ajax({
@@ -42,10 +42,10 @@
         </script>
 
 
-=       <label for="mpassword">Password:</label>
+        <label for="mpassword">Password:</label>
         <input type="text" id="mpassword" placeholder="Enter New Password" name="mpassword" /><br>
 
-=       <label for="mname">Name:</label>
+        <label for="mname">Name:</label>
         <input type="text" id="mname" placeholder="Enter Your Name" name="mname" /><br>
 
         <label for="mage">Age:</label>
