--- a/public/modify.html
+++ b/public/modify.html
@@ -17,31 +17,30 @@
     <div id="mmodify">
     <h1>Modify</h1>
     <h2 >Personal Information</h2>
-    <div >
-        
-        <label>ID: <label id="mid"></label> </label><br>
- 
-        <script>
-            //run right away
-            $.ajax({
-                type:"get",
-                url:"/userlist",
-                success:function(data){
-                    if(data.status==-1){
-                        var user="";
-                        user+=data.user;
-                        $("#name").html(user);
-                        $("#mid").html(user);
-                    }
-                },
-                error:function(){
-                    alert("Internet Error");
+
+    <label>ID: <label id="mid"></label> </label><br>
+
+    <script>
+        //run right away
+        $.ajax({
+            type:"get",
+            url:"/userlist",
+            success:function(data){
+                if(data.status==-1){
+                    var user="";
+                    user+=data.user;
+                    $("#name").html(user);
+                    $("#mid").html(user);
                 }
-            });    
+            },
+            error:function(){
+                alert("Internet Error");
+            }
+        });    
 
-        </script>
+    </script>
 
-
+    <form action="/modify" method= "post" >
         <label for="mpassword">Password:</label>
         <input type="text" id="mpassword" placeholder="Enter New Password" name="mpassword" /><br>
 
@@ -70,7 +69,7 @@
             <input type="submit" value="modify" id="mbutton" >
             <input type="button" value="Back" id="mback" >
         </a>
-    </div>
+    </form>
 </div>
 
     
