--- a/public/modify.html
+++ b/public/modify.html
@@ -86,7 +86,7 @@
                     if(data.status==-1){
                         alert("Modify Fail!");
                     }else{
-                        location.href="https://stark-spire-21434.herokuapp.com/homepage.html"
+                        alert("Modify success!");
                     }
                 },
                 error:function(){
