--- a/public/modify.html
+++ b/public/modify.html
@@ -86,7 +86,8 @@
             success:function(data){
                 if(data.status==-1){
                     alert("Modify Fail!");
-                }else{
+                }
+                else{
                     alert("Modify success!");
                 }
             },
