--- a/public/modify.html
+++ b/public/modify.html
@@ -75,7 +75,7 @@
 
     <script>
         $("#mbutton").click(function(){
-            var mpassword=$("#mspassword").val();
+            var mpassword=$("#mpassword").val();
             var mname=$("#mname").val();
             var mage=$("#mage").val();
             var mquestion=$("#mquestion").val();
