--- a/public/signup.html
+++ b/public/signup.html
@@ -80,7 +80,7 @@
         }
       },
       error:function(){
-        alert("Internet error!");
+        alert("unknown signup error!");
       }
     })
   });
