--- a/public/signup.html
+++ b/public/signup.html
@@ -75,12 +75,13 @@
       success:function(data){
         if(data.status==0){
           location.href="https://stark-spire-21434.herokuapp.com/login.html";
-        }else{
+        }
+        else{
           alert(data.msg);
         }
       },
       error:function(){
-        alert("unknown signup error!");
+        alert(data.msg);
       }
     })
   });
