--- a/public/signup.html
+++ b/public/signup.html
@@ -78,6 +78,7 @@
         }
         else{
           alert(data.msg);
+          location.href="https://stark-spire-21434.herokuapp.com/signup.html";
         }
       },
       error:function(){
