--- a/public/memory game/index.html
+++ b/public/memory game/index.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <title>Memory Game</title>
-<link href="styles/matchgame.css" rel="stylesheet">
+<link href="styles/memorygame.css" rel="stylesheet">
 <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Coda">
 <link rel="stylesheet prefetch" href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Permanent+Marker" >
 </head>
 <body>
 
-<script type="text/javascript" src="scripts/htm5game.matchgame.js"></script>
+<script type="text/javascript" src="scripts/memorygame.js"></script>
 <script type="text/javascript" src="scripts/jquery-1.11.1.min.js"></script>
 
 <div class="container">
@@ -59,8 +59,8 @@ $(function(){
 </script>
 
 <div style="text-align:center;clear:both;">
-<script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
-<script src="/follow.js" type="text/javascript"></script>
+<!-- <script src="/gg_bd_ad_720x90.js" type="text/javascript"></script>
+<script src="/follow.js" type="text/javascript"></script> -->
 </div>
 </body>
 </html>
