--- a/public/homepage.html
+++ b/public/homepage.html
@@ -112,9 +112,17 @@
     </tr>
 </table>
 
-<!--<form action="/rank check" method="post" >
-<input type="submit" value="update" />
-</form>-->
+
+
+<form action="/poke" method="post" >
+<input type="submit" value="poke api test" />
+</form>
+
+
+
+
+
+
 
 <button id="account" class="float-left submit-button" >Info</button>
 
